[package]
name = "micro-ecc-sys"
description = "Low-level bindings to micro-ecc"
version = "0.1.3"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
license = "BSD-2-Clause"
readme = "README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]
repository = "https://github.com/nickray/micro-ecc-sys"

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = { version = "0.52.0", optional = true }
cc = "1.0.25"

[features]
default = ["run-bindgen"]
no-umaal = []
run-bindgen = ["bindgen"]
square = []
