[package]
name = "micro-ecc-sys"
description = "Low-level bindings to micro-ecc"
version = "0.3.1"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"
license = "BSD-2-Clause"
readme = "README.md"
categories = ["embedded", "no-std", "cryptography"]
keywords = ["no-std", "nist", "cryptography", "signatures", "cortex-m"]
repository = "https://github.com/ycrypto/micro-ecc-sys"

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = { version = "0.53.1", default-features = false }
cc = "1.0.25"

[features]
no-umaal = []
square = []
